--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,15 @@
-# Go 编译输出文件
+# ========== Go 开发相关 ==========
+
+# 编译输出
 hello
 main
 your_app
-
-# Go 临时输出
 *.exe
 *.out
 *.o
 *.a
 
-# IDE 相关
-.vscode/
-.idea/
-
-# Go Modules
+# 模块依赖（如果你启用了 vendoring）
 /vendor/
 
 # 日志和临时文件
@@ -23,3 +19,36 @@ your_app
 
 # 本地配置
 .env
+.env.local
+.env.*.local
+
+# IDE 设置
+.vscode/
+.idea/
+
+# ========== Vue / Node 项目相关 ==========
+
+# Node modules
+node_modules/
+
+# 打包目录（Vite 或 Webpack）
+dist/
+build/
+
+# 锁文件（保留一个）
+# package-lock.json
+# yarn.lock
+# pnpm-lock.yaml
+
+# 调试日志
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# 测试覆盖率
+coverage/
+
+# 操作系统生成的临时文件
+.DS_Store
+Thumbs.db
