--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,10 @@ coverage/
 # 操作系统生成的临时文件
 .DS_Store
 Thumbs.db
+
+# 忽略上传目录
+/static/uploads/
+
+# 但保留空目录结构
+!/static/uploads/images/
+!/static/uploads/images/**/.gitkeep
